--- a/src/utils/global.scss
+++ b/src/utils/global.scss
@@ -9,6 +9,7 @@ body.light {
   --textNormal: #222;
   --textTitle: #222;
   --hr: hsla(0, 0%, 0%, 0.2);
+  --header-hr: #fff;
   --inlineCode-bg: rgba(255, 229, 100, 0.2);
   --inlineCode-text: #1a1a1a;
   --hover: #fcf113;
@@ -22,10 +23,13 @@ body.dark {
   --textNormal: rgba(255, 255, 255, 0.88);
   --textTitle: #fff;
   --hr: hsla(0, 0%, 100%, 0.2);
+  --header-hr: #2d3748;
   --inlineCode-bg: rgba(67, 97, 149, 0.5);
   --inlineCode-text: #e6e6e6;
   --hover: #8c61ff;
 }
+
+$theme-color: --bg;
 
 .container {
   display: flex;
@@ -89,14 +93,55 @@ main {
     div {
       width: 1.375rem;
       height: 1.375rem;
-      border-radius: 50%;
       cursor: pointer;
     }
     .on {
-      background-color: #fff;
+      background-color: #282c35;
+      fill: #fff;
     }
     .off {
-      background-color: #282c35;
+      background-color: #fff;
+      fill: #282c35;
+    }
+  }
+}
+
+.header {
+  box-sizing: border-box;
+  display: flex;
+  padding: 1rem 1.3125rem;
+  border-bottom-style: solid;
+  border-bottom-width: 1px;
+  border-bottom-color: var(--header-hr);
+  padding-bottom: 1rem;
+  -webkit-box-align: center;
+  align-items: center;
+  -webkit-box-pack: justify;
+  justify-content: space-between;
+  flex-flow: wrap;
+
+  .nav{
+    font-size: 1rem;
+  }
+
+  .links{
+    box-sizing: border-box;
+    margin: 5px;
+    color: #7f8ea3;
+    text-decoration: none;
+    background: linear-gradient(to right, var(--hover) 50%, transparent 50%);
+    background-size: 202% 100%;
+    background-position: 100% center;
+    transition: all 0.3s ease-out;
+    font-weight: 400;
+    &:hover {
+      @if $theme-color == #fff{
+        color: #000;
+      } @else {
+        color: #fff;
+      }
+      
+      background-position: left center;
     }
   }
 }
@@ -119,10 +164,75 @@ main {
   font-size: 3rem;
 }
 
+//Tittles
+.tittles {
+  border-bottom-style: solid;
+  border-bottom-width: 1px;
+  border-bottom-color: #2d3748;
+  padding-bottom: 1rem;
+  margin-bottom: 2rem;
+
+  .emoji{
+    font-size: 2rem;
+    margin: 8px;
+  }
+
+  h1{
+    position:relative;
+    display:inline-block;
+    z-index: 1;
+
+    &:after{
+      content:'';
+      position: absolute;
+      z-index: -1;
+      left:0;right:5;
+      margin: 10px auto;
+      width:60%;
+      height:36px;
+      background: linear-gradient(
+        to bottom,
+        transparent 65%,
+        var(--hover) 10%
+      );
+      background-size: 100% 100%;
+    }
+  }
+
+  .link{
+    display: block;
+    color: #7f8ea3;
+  }
+  
+}
+
+//Web technologies
+.web-technologies{
+  display: flex;
+  padding: 0 5px;
+  width: 100%;
+
+  .web-icon:hover{
+    fill: #8c61ff;
+  }
+
+  .column{
+    flex: 33.33%;
+    margin: 10px;
+  }
+}
+
 // Blog list
 .blog-list {
   list-style: none;
-  margin: 0;
+  width: 100%;
+  margin: auto;
+  padding: 2em;
+  box-shadow: 0px 8px 60px -10px rgba(13,28,39,0.6);
+  background: --bg;
+  border-radius: 12px;
+  max-width: 700px;
+  position: relative;
   h2 {
     margin: 0;
     a {
@@ -168,6 +278,7 @@ main {
   font-family: Georgia, Cambria, "Times New Roman", Times, serif;
   font-size: 0.9rem;
   line-height: 2;
+  margin-top: 3rem;
   margin-bottom: 1rem;
   .social-links {
     float: right;
